; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/pktsched/extr_pktsched_qfq.c_qfq_dequeue_ifclassq.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/pktsched/extr_pktsched_qfq.c_qfq_dequeue_ifclassq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifclassq = type { i32 }
%struct.TYPE_4__ = type { i8*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.ifclassq*, i32*)* @qfq_dequeue_ifclassq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @qfq_dequeue_ifclassq(%struct.ifclassq* %0, i32* %1) #0 {
  %3 = alloca %struct.ifclassq*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_4__, align 8
  store %struct.ifclassq* %0, %struct.ifclassq** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = call i32 @bzero(%struct.TYPE_4__* %5, i32 16)
  %7 = load %struct.ifclassq*, %struct.ifclassq** %3, align 8
  %8 = getelementptr inbounds %struct.ifclassq, %struct.ifclassq* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @qfq_dequeue(i32 %9, %struct.TYPE_4__* %5)
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 1
  %12 = load i32, i32* %11, align 8
  %13 = load i32*, i32** %4, align 8
  store i32 %12, i32* %13, align 4
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %15 = load i8*, i8** %14, align 8
  ret i8* %15
}

declare dso_local i32 @bzero(%struct.TYPE_4__*, i32) #1

declare dso_local i32 @qfq_dequeue(i32, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
